--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vercel-build": "prisma generate && next build"
   },
   "dependencies": {
-    "@ai-sdk/groq": "latest",
+    "@ai-sdk/groq": "^1.2.8",
     "@auth/core": "latest",
     "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^3.9.1",
@@ -44,8 +44,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/bcrypt": "^5.0.2",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
