--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "groq-resume-builder",
+  "name": "ai-resume-builder",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/groq": "^1.2.8",
+    "@ai-sdk/groq": "^1.2.9",
     "@auth/prisma-adapter": "^2.9.0",
     "@google-cloud/talent": "^7.0.1",
     "@hookform/resolvers": "^3.3.4",
@@ -29,6 +29,8 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.96",
     "@types/bcryptjs": "^2.4.6",
     "ai": "^4.3.10",
     "bcryptjs": "^3.0.2",
@@ -37,15 +39,17 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
-    "groq-sdk": "^0.3.0",
     "lucide-react": "^0.331.0",
     "next": "^14.2.28",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.103.0",
     "react": "^18",
     "react-day-picker": "^9.6.7",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-markdown": "^10.1.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
