Fix pnpm-lock.yaml and update Vercel deployment config

--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,6 @@
     "env": {
       "NEXT_PUBLIC_APP_URL": "${VERCEL_URL}"
     }
-  }
+  },
+  "installCommand": "npm install --legacy-peer-deps"
 } 
