--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm install --no-save @radix-ui/react-checkbox && prisma generate && next build",
+    "build": "npm install --no-save @radix-ui/react-checkbox @radix-ui/react-collection && prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,6 +18,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collection": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
