--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "ai-resume-builder",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "npm install --no-save @radix-ui/react-checkbox @radix-ui/react-collection && prisma generate && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
