--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
 legacy-peer-deps=true
 strict-peer-dependencies=false
-auto-install-peers=true 
+auto-install-peers=true
+enable-pre-post-scripts=true
+public-hoist-pattern[]=*prisma*
+public-hoist-pattern[]=*@prisma/client*
