Update deployment configuration and sync dependencies

--- a/.npmrc
+++ b/.npmrc
@@ -2,5 +2,7 @@ legacy-peer-deps=true
 strict-peer-dependencies=false
 auto-install-peers=true
 enable-pre-post-scripts=true
+prefer-frozen-lockfile=false
+node-linker=hoisted
 public-hoist-pattern[]=*prisma*
 public-hoist-pattern[]=*@prisma/client*
