--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
-{
-  "version": 2,
+{  "version": 2,
   "buildCommand": "pnpm run build",
   "installCommand": "pnpm install --no-frozen-lockfile",
   "env": {
-    "NEXT_PUBLIC_APP_URL": "${VERCEL_URL}"
+    "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_APP_URL": "${VERCEL_URL}",
+      "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
       "PRISMA_GENERATE": "true"
     }
   },
