fix: resolve NVIDIA API integration issues
- Update NVIDIA API endpoint to v1
- Add better error handling for API calls
- Update environment configuration
- Add detailed error responses in realtime-feedback route

--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,17 @@
   "installCommand": "pnpm install --no-frozen-lockfile",
   "env": {
     "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
-    "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app"
+    "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
+    "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v1/chat/completions",
+    "NODE_ENV": "production"
   },
   "build": {
     "env": {
       "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
       "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
-      "PRISMA_GENERATE": "true"
+      "PRISMA_GENERATE": "true",
+      "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v1/chat/completions",
+      "NODE_ENV": "production"
     }
   },
   "functions": {
