--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
   "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install --no-frozen-lockfile",
-  "env": {
+  "installCommand": "pnpm install --no-frozen-lockfile",  "env": {
     "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
     "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
-    "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v1/chat/completions",
+    "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v2/chat/completions",
     "NODE_ENV": "production"
   },
   "build": {
@@ -13,7 +12,7 @@
       "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
       "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
       "PRISMA_GENERATE": "true",
-      "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v1/chat/completions",
+      "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v2/chat/completions",
       "NODE_ENV": "production"
     }
   },
