refactor: migrate from Groq to NVIDIA API - Update API configuration to use NVIDIA endpoints - Remove Groq dependencies and configuration - Update model names to use mixtral_8x7b - Clean up package dependencies

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 # Development Environment Configuration
 
-# NVIDIA API Configuration (v1 endpoint for deployed environments)
-NVIDIA_API_URL=https://api.nvcf.nvidia.com/v1/chat/completions
-NVIDIA_API_KEY=your-api-key-here
+# NVIDIA API Configuration (v2 endpoint)
+NVIDIA_API_URL=https://api.nvcf.nvidia.com/v2/chat/completions
+NVIDIA_API_KEY=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
 
 # Database & Cache Configuration
 DATABASE_URL="postgresql://user:password@localhost:5432/hiresense?schema=public"
