Update NVIDIA API to use deepseek-r1 model and fix authentication

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
     "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
     "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v2/chat/completions",
+    "NVIDIA_API_KEY": "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",
     "NODE_ENV": "production"
   },
   "build": {
@@ -13,6 +14,7 @@
       "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
       "PRISMA_GENERATE": "true",
       "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v2/chat/completions",
+      "NVIDIA_API_KEY": "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",
       "NODE_ENV": "production"
     }
   },
