--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build": "prisma generate && next build",
     "postinstall": "prisma generate",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup-local": "node scripts/setup-local-model.js"
   },
   "dependencies": {
 
     "@auth/prisma-adapter": "^2.9.0",
     "@google-cloud/talent": "^7.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mlc-ai/web-llm": "^0.2.17",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -43,6 +45,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
+    "cookies-next": "^4.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.331.0",
