--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,9 @@
   "installCommand": "pnpm install --no-frozen-lockfile",  "env": {
     "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
     "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
-    "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v1/chat/completions",
+    "NVIDIA_API_URL": "https://integrate.api.nvidia.com/v1/chat/completions",
     "NVIDIA_API_KEY": "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",
+    "USE_LOCAL_INFERENCE": "false",
     "NODE_ENV": "production"
   },
   "build": {
@@ -13,8 +14,9 @@
       "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
       "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
       "PRISMA_GENERATE": "true",
-      "NVIDIA_API_URL": "https://api.nvcf.nvidia.com/v1/chat/completions",
+      "NVIDIA_API_URL": "https://integrate.api.nvidia.com/v1/chat/completions",
       "NVIDIA_API_KEY": "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",
+      "USE_LOCAL_INFERENCE": "false",
       "NODE_ENV": "production"
     }
   },
