--- a/vercel.json
+++ b/vercel.json
@@ -4,20 +4,12 @@
   "installCommand": "pnpm install --no-frozen-lockfile",  "env": {
     "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
     "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
-    "GROQ_API_URL": "https://api.groq.com/openai/v1/chat/completions",
-    "GROQ_API_KEY": "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",
-    "DEFAULT_MODEL": "llama3-70b-8192",
-    "USE_LOCAL_INFERENCE": "false",
     "NODE_ENV": "production"
   },
-  "build": {
-    "env": {
+  "build": {    "env": {
       "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
       "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
       "PRISMA_GENERATE": "true",
-      "GROQ_API_URL": "https://api.groq.com/openai/v1/chat/completions",
-      "GROQ_API_KEY": "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",
-      "DEFAULT_MODEL": "llama3-70b-8192",
       "USE_LOCAL_INFERENCE": "false",
       "NODE_ENV": "production"
     }
