--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,9 @@
     "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
     "NODE_ENV": "production"
   },
-  "build": {    "env": {
-      "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
+  "build": {    "env": {      "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
       "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
       "PRISMA_GENERATE": "true",
-      "USE_LOCAL_INFERENCE": "false",
       "NODE_ENV": "production"
     }
   },
