--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "postinstall": "prisma generate",
+    "test": "vitest",
     "start": "next start",
     "lint": "next lint",
     "setup-local": "node scripts/setup-local-model.js"
   },
   "dependencies": {
-
     "@auth/prisma-adapter": "^2.9.0",
     "@google-cloud/talent": "^7.0.1",
     "@hookform/resolvers": "^3.3.4",
@@ -65,16 +64,21 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jsdom": "^26.1.0",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.1.4"
   }
 }
