--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@splinetool/react-spline": "^4.0.0",
-    "@splinetool/runtime": "^1.9.96",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
+    "@splinetool/react-spline": "2.2.6",
+    "@splinetool/runtime": "0.9.473",
+    "@studio-freight/lenis": "^1.0.42",
     "@types/bcryptjs": "^2.4.6",
+    "@types/three": "^0.176.0",
     "ai": "^4.3.10",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
@@ -46,21 +50,23 @@
     "cmdk": "^1.1.1",
     "cookies-next": "^4.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.9.2",
+    "framer-motion": "^12.14.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.331.0",
-    "next": "^14.2.28",
+    "next": "15.3.2",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.103.0",
-    "react": "^18",
+    "react": "^19.1.0",
     "react-day-picker": "^9.6.7",
-    "react-dom": "^18",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.50.1",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -80,5 +86,10 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vitest": "^3.1.4"
+  },
+  "type": "module",
+  "resolutions": {
+    "@splinetool/runtime": "0.9.473",
+    "@splinetool/react-spline": "2.2.6"
   }
 }
