--- a/vercel.json
+++ b/vercel.json
@@ -17,10 +17,24 @@
       "memory": 1024,
       "maxDuration": 60
     }
-  },
-  "routes": [
+  },  "routes": [
     {
       "src": "/spline/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
+      "src": "/Background.mp4",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "content-type": "video/mp4"
+      },
+      "continue": true
+    },
+    {
+      "src": "/(.*\\.(mp4|webp))",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       },
