--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,13 @@
     }
   },  "routes": [
     {
+      "src": "/Background.png",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
       "src": "/spline/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
