--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 NVIDIA_API_KEY=your-nvidia-api-key-here
 NVIDIA_API_URL=https://api.nvcf.nvidia.com/v2/chat/completions
 
+# Google Places API Configuration
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+
 # Next.js Configuration
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
