--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,13 @@
       "continue": true
     },
     {
+      "src": "/Background(2).png",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
       "src": "/spline/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
