✨ Major update: Add comprehensive admin dashboard, AI integration, and deployment configs
- Add comprehensive admin dashboard with user management, analytics, and AI controls
- Implement AI chat assistant and resume analyzer components
- Add NVIDIA AI integration with DeepSeek support
- Include admin authentication and role management
- Add deployment configurations for Vercel and Filess
- Implement job management and resume scoring features
- Add Python API server and various utility scripts
- Update database schema and environment configurations
- Add extensive documentation for setup and deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# NVIDIA API Configuration
+# NVIDIA DeepSeek AI Configuration
 NVIDIA_API_KEY=your-nvidia-api-key-here
-NVIDIA_API_URL=https://api.nvcf.nvidia.com/v2/chat/completions
+AI_DEFAULT_MODEL=deepseek-ai/deepseek-r1-distill-llama-8b
 
 # Google Places API Configuration
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
