--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,20 @@ hackhazards25-09954bb303eb.json
 
 # Environment variables
 .env
+.env.local
+.env.development.local
+.env.production.local
+
+# Python virtual environment and related files
+scripts/venv/
+scripts/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+# Package lock files (keep only one)
+package-lock.json
+
+# OS specific files
+nul
