--- a/package.json
+++ b/package.json
@@ -11,12 +11,29 @@
     "test": "vitest",
     "start": "next start",
     "lint": "next lint",
-    "setup-local": "node scripts/setup-local-model.js"
+    "setup-local": "node scripts/setup-local-model.js",
+    "vercel-build": "prisma generate && npm run build",
+    "postinstall": "prisma generate",
+    "db:migrate": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:seed": "node scripts/create-admin.js",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset --force",
+    "type-check": "tsc --noEmit",
+    "build:analyze": "ANALYZE=true npm run build",
+    "preview": "npm run build && npm run start",
+    "deploy:vercel": "bash scripts/deploy-vercel.sh",
+    "admin:create": "node scripts/create-admin.js",
+    "admin:update": "node scripts/update-admin.js",
+    "db:setup-filess": "echo 'Please run the SQL in migrations/filess-manual-setup.sql in your Filess.io console'"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@google-cloud/talent": "^7.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.61",
     "@mlc-ai/web-llm": "^0.2.17",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -52,8 +69,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.14.0",
     "gsap": "^3.13.0",
+    "langchain": "^0.3.29",
     "lucide-react": "^0.331.0",
-    "next": "15.3.2",
+    "next": "^15.3.5",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
