--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,38 @@
 {
   "version": 2,
-  "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install --no-frozen-lockfile",  "env": {
-    "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
-    "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
-    "NODE_ENV": "production"
-  },  "build": {    "env": {      "NEXT_PUBLIC_APP_URL": "https://hire-sense-ai-vert.vercel.app",
-      "NEXTAUTH_URL": "https://hire-sense-ai-vert.vercel.app",
+  "buildCommand": "prisma generate && npm run build",
+  "installCommand": "pnpm install --no-frozen-lockfile",
+  "env": {
+    "NODE_ENV": "production",
+    "PRISMA_GENERATE": "true"
+  },
+  "build": {
+    "env": {
       "PRISMA_GENERATE": "true",
       "NODE_ENV": "production"
     }
   },
   "functions": {
-    "app/api/**/*": {
+    "app/api/**/*.js": {
       "memory": 1024,
+      "maxDuration": 30
+    },
+    "app/api/auth/**/*.js": {
+      "memory": 512,
+      "maxDuration": 15
+    },
+    "app/api/migrate/**/*.js": {
+      "memory": 512,
       "maxDuration": 60
+    },
+    "app/api/health/**/*.js": {
+      "memory": 256,
+      "maxDuration": 10
     }
-  },  "routes": [
+  },
+  "regions": ["iad1"],
+  "crons": [],
+  "routes": [
     {
       "src": "/Background.png",
       "headers": {
@@ -47,7 +63,7 @@
       "continue": true
     },
     {
-      "src": "/(.*\\.(mp4|webp))",
+      "src": "/(.*\\.(mp4|webp|png|jpg|jpeg|gif|svg|ico))",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       },
