Update admin user configuration
- Remove admin@hiresenseai.com user
- Add 4 team admin users: Himanshu, Rishika, Smrati, Shikha
- Update admin credentials in ADMIN_CREDENTIALS.md
- Modify update-admin.js to create multiple admin users
- Add new admin setup scripts for multiple user creation
- Add admin:setup-multiple npm script command

Admin users configured:
- himanshu@hiresense.ai
- rishika@hiresense.ai
- smrati@hiresense.ai
- shikha@hiresense.ai

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "deploy:vercel": "bash scripts/deploy-vercel.sh",
     "admin:create": "node scripts/create-admin.js",
     "admin:update": "node scripts/update-admin.js",
+    "admin:setup-multiple": "node scripts/setup-multiple-admins.js",
     "db:setup-filess": "echo 'Please run the SQL in migrations/filess-manual-setup.sql in your Filess.io console'"
   },
   "dependencies": {
