Replace Adzuna API with RapidAPI JSsearch
- Replace ADZUNA_APP_ID and ADZUNA_API_KEY with RAPIDAPI_KEY and RAPIDAPI_HOST
- Update job-search.js API to use environment variables instead of hardcoded keys
- Update all UI references from 'Adzuna' to 'JSsearch' in admin dashboard
- Update documentation in privacy policy, about page, and main page
- Change job source types from 'adzuna' to 'jsearch'
- Update .env.example with new RapidAPI configuration

API Configuration:
- X-RapidAPI-Key: ba4bbabc0emshae9e858121c9906p1ae9bejsn0f6bf1d21e25
- X-RapidAPI-Host: jsearch.p.rapidapi.com

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 NVIDIA_API_KEY=your-nvidia-api-key-here
 AI_DEFAULT_MODEL=deepseek-ai/deepseek-r1-distill-llama-8b
 
+# RapidAPI JSsearch Configuration
+RAPIDAPI_KEY=your-rapidapi-key-here
+RAPIDAPI_HOST=jsearch.p.rapidapi.com
+
 # Google Places API Configuration
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
 
