Switch job search from RapidAPI JSsearch to Adzuna API
- Complete rewrite of job search APIs to use Adzuna API instead of RapidAPI
- Updated job-search.js and job-search-enhanced.js for Adzuna integration
- Added Adzuna API credentials to environment configuration
- Enhanced salary formatting for Adzuna job data structure
- Added skill extraction from job descriptions
- Maintained India-only filtering and location-based search
- Preserved pagination, jobs-per-page selector, and enhanced search features
- Added test-adzuna.js endpoint for API diagnostics
- Updated test endpoints to work with new Adzuna integration
- All existing features (salary display, pagination, location filtering) maintained

--- a/.env.development
+++ b/.env.development
@@ -20,3 +20,7 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Other Configuration
 NODE_ENV=development
+
+# Adzuna Job Search API Configuration
+ADZUNA_APP_ID=your-adzuna-app-id-here
+ADZUNA_APP_KEY=your-adzuna-app-key-here
