--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 NVIDIA_API_KEY=your-nvidia-api-key-here
 AI_DEFAULT_MODEL=deepseek-ai/deepseek-r1-distill-llama-8b
 
-# RapidAPI JSsearch Configuration
-RAPIDAPI_KEY=your-rapidapi-key-here
-RAPIDAPI_HOST=jsearch.p.rapidapi.com
+# Adzuna Job Search API Configuration
+ADZUNA_APP_ID=your-adzuna-app-id-here
+ADZUNA_APP_KEY=your-adzuna-app-key-here
 
 # Google Places API Configuration
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
